[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/upgradeButton.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[node name="firstPC" type="Panel"]
margin_right = 890.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hashButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.92549, 0.941176, 0.945098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hashUpgradePrice" type="Label" parent="hashButton"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -329.184
margin_top = -35.0
margin_right = -29.1841
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.92549, 0.941176, 0.945098, 1 )
text = "[price]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgradeBar" type="ProgressBar" parent="hashButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 35.9187
margin_top = -43.0
margin_right = 550.919
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.92549, 0.941176, 0.945098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="hashButton" to="." method="_on_hashButton_pressed"]
